k8s/deployment-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topscorers-discord-bot
  namespace: topscorers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: topscorers-discord-bot
  template:
    metadata:
      labels:
        app: topscorers-discord-bot
    spec:
      containers:
      - name: bot
        image: ghcr.io/drokenhorisk/topscorers-discord-bot:latest
        imagePullPolicy: Always
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: topscorers-data
