k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topscorers-frontend
  namespace: topscorers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: topscorers-frontend
  template:
    metadata:
      labels:
        app: topscorers-frontend
    spec:
      containers:
        - name: web
          image: ghcr.io/drokenhorisk/topscorers-frontend:295daaea3091e60d3dec09ba0bdc2394451b90b6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-conf
          configMap:
            name: topscorers-frontend-nginx
            items:
              - key: default.conf
                path: default.conf
