k8s/service-backend.yaml
#k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: topscorers-backend
  namespace: topscorers
spec:
  selector: { app: topscorers-backend }
  ports:
    - name: http
      port: 8080
      targetPort: 8080
