k8s/service-frontend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: topscorers-frontend-nodeport
  namespace: topscorers
spec:
  type: NodePort
  selector:
    app: topscorers-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 50080   # ✅ dans la range 49152–65535
