k8s/service-frontend.yaml
#k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: topscorers-frontend
  namespace: topscorers
spec:
  selector: { app: topscorers-frontend }
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
